Debug react.js front-end display and function

--- a/client/src/components/SearchResults/style.css
+++ b/client/src/components/SearchResults/style.css
@@ -1,3 +1,8 @@
 ul.search-results img {
-  margin: 0 auto;
+  margin: auto;
+}
+
+.title-font{
+  font-family: 'Courgette', cursive;
+  color: black;
 }
